<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".App.View.Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_30sdp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/lottieAnimationView"
            android:layout_width="220dp"
            android:layout_height="220dp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/signup_anim" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="@dimen/_24ssp"
            android:textColor="@color/DarkText"
            android:paddingStart="@dimen/_10sdp"
            android:fontFamily="@font/lexend_bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_continue"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/DarkText"
            android:paddingStart="@dimen/_12sdp"
            android:fontFamily="@font/lexend_bold" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textColorHint="@color/DarkText"
            app:boxStrokeColor="#C4B1CF"
            app:hintTextAppearance="@style/MyHintTextStyle"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:hintTextColor="@color/DarkText"
            android:layout_marginTop="@dimen/_15sdp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_medium"
                android:textColor="@color/DarkText"
                android:textSize="@dimen/_13ssp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:textColorHint="@color/DarkText"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="#C4B1CF"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:hintTextColor="@color/DarkText"
            android:layout_marginTop="@dimen/_15sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_medium"
                android:textColor="@color/DarkText"
                android:textSize="@dimen/_13ssp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/toSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_yet"
            android:textSize="@dimen/_11ssp"
            android:paddingEnd="@dimen/_5sdp"
            android:gravity="right"
            android:textColor="#C4B1CF"
            android:fontFamily="@font/lexend" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/btnProgress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_44sdp"
        android:orientation="horizontal"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/btn_progress" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>