<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".App.View.Activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/icon_arrow_left" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1" />
        </LinearLayout>


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/roundedImageView"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_gravity="center"
            android:background="@drawable/ava_placeholder"
            android:scaleType="center"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/proc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_gravity="center"
            android:fontFamily="@font/lexend_bold"
            android:text="Frida"
            android:textColor="@color/DarkText"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintStart_toEndOf="@+id/roundedImageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lexend_semibold"
            android:text="You’re rock!"
            android:layout_gravity="center"
            android:textColor="@color/greytext_200"
            app:layout_constraintStart_toEndOf="@+id/roundedImageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/lexend_semibold"
            android:text="You’ve finished lat book in 3 days"
            android:textColor="@color/greytext_200"
            app:layout_constraintStart_toEndOf="@+id/roundedImageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView" />


        <LinearLayout
            android:id="@+id/btBookmarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:background="@drawable/ripple_effect">
            <ImageButton
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/icon_bookmark" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/lexend_medium"
                android:text="Bookmarks"
                android:textColor="@color/DarkText"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="#D9D9D9"/>

        <LinearLayout
            android:id="@+id/btAddBooks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:background="@drawable/ripple_effect">
            <ImageButton
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/icon_add_file" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:fontFamily="@font/lexend_medium"
                android:text="Add books"
                android:textColor="@color/DarkText"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="#D9D9D9"/>

        <LinearLayout
            android:id="@+id/btSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:background="@drawable/ripple_effect">
            <ImageButton
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/icon_settings" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:fontFamily="@font/lexend_medium"
                android:text="Settings"
                android:textColor="@color/DarkText"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="#D9D9D9"/>


        <LinearLayout
            android:id="@+id/btLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:background="@drawable/ripple_effect">
            <ImageButton
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/icon_log_out" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:fontFamily="@font/lexend_medium"
                android:text="Log out"
                android:textColor="@color/DarkText"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="#D9D9D9"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/icon_book" />

                <TextView
                    android:id="@+id/booksCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/lexend_semibold"
                    android:text="@string/_18_books"
                    android:textColor="@color/DarkText"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:fontFamily="@font/lexend_semibold"
                    android:text="@string/you_have"
                    android:textColor="@color/greytext_200" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/icon_clock" />

                <TextView
                    android:id="@+id/allTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/lexend_semibold"
                    android:text="@string/_158_h"
                    android:textColor="@color/DarkText"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:fontFamily="@font/lexend_semibold"
                    android:text="@string/of_reading"
                    android:textColor="@color/greytext_200" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/icon_completed" />

                <TextView
                    android:id="@+id/BookSucess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/lexend_semibold"
                    android:text="@string/_5_books"
                    android:textColor="@color/DarkText"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:fontFamily="@font/lexend_semibold"
                    android:text="@string/done"
                    android:textColor="@color/greytext_200" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

<View
    android:id="@+id/viewPager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_60sdp"
    android:layout_marginBottom="@dimen/_25sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>